feat: Integrate all endpoint using swagger and add logic for create user data
