# internal/handler/user/controller_upsert_user.go
@@ -1,7 +1,0 @@
-package user
-
-import "github.com/labstack/echo/v4"
-
-func (u *UserController) UpsertUser(c echo.Context) error {
-	return nil
-}
